# medi-watch

./: .env.example  .env.test  .gitignore  README.md  pyproject.toml
agent/: __init__.py  alerts.py  camera.py  config.py  mediwatch_agent.py  processors.py  schemas.py  server.py  types.py
agent/instructions/: mediwatch_protocol.md
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.tsx  index.css
dashboard/src/components/: Analytics.tsx  EventLog.tsx  LiveFeed.tsx
dashboard/src/components/alerts/: AlertCard.tsx  AlertPanel.tsx
dashboard/src/components/settings/: Settings.tsx
dashboard/src/components/shared/: ConfidenceMeter.tsx  DisclaimerBanner.tsx  SeverityBadge.tsx  StatusIndicator.tsx
dashboard/src/hooks/: useAgentSocket.ts  useAlerts.ts  useAuditLog.ts  usePushNotifications.ts
dashboard/src/types/: mediwatch.ts
dashboard/src/utils/: export.ts  notifications.ts
docker/: Dockerfile.agent  docker-compose.yml
tests/: conftest.py  test_alerts.py  test_processor.py
tests/fixtures/: synthetic_poses.py
tools/: download_weights.py  evaluate.py
